<resources>
    <string name="app_name">Reddit</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome</string>
    <string name="kavo">kavo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
</resources>